--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^22.10.7",
+		"@vite-pwa/sveltekit": "^0.6.7",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -34,6 +35,7 @@
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^5.4.11"
+		"vite": "^5.4.11",
+		"workbox-precaching": "^7.3.0"
 	}
 }
