--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^5.4.11",
-		"workbox-precaching": "^7.3.0"
+		"workbox-precaching": "^7.3.0",
+      "cookie": "1.0.2"
 	}
 }
